infra/envs/k3s/authentik/manifests/forward-auth-route.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/traefik.io/ingressroute_v1alpha1.json
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: outpost-traefik-dashboard
  namespace: authentik
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`traefik.lab.home`) && PathPrefix(`/outpost.goauthentik.io/`)
      priority: 100
      services:
        - name: authentik-server
          port: 80
